# firehose-client

./: Cargo.toml
.github/workflows/: tests.yml
examples/: fetch_beacon.rs  fetch_ethereum.rs  stream_ethereum.rs
src/: client.rs  lib.rs
