[package]
name = "firehose-client"
version = "0.1.1"
edition = "2021"

[lib]
name = "firehose_client"
path = "src/lib.rs"

[dependencies]
dotenvy = "0.15.7"
firehose-rs = "0.1.0"
futures = "0.3.31"
http = "1.1.0"
once_cell = "1.20.2"
rustls = { version = "0.23.12", features = ["ring"] }
thiserror = "2.0.0"
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.16"
tonic = { version = "0.12.0", features = ["tls-roots"] }
tracing = "0.1.40"

[dev-dependencies]
beacon-protos = { git = "https://github.com/semiotic-ai/beacon-protos.git", branch = "main" }
vee = { git = "https://github.com/semiotic-ai/veemon.git", branch = "main" }
hex = "0.4.3"
