[package]
name = "firehose-client"
version = "0.1.1"
edition = "2021"

[lib]
name = "firehose_client"
path = "src/lib.rs"

[dependencies]
dotenvy = "0.15.7"
firehose-rs = "0.3.0"
futures = "0.3.31"
http = "1.3.1"
once_cell = "1.21.3"
rustls = { version = "0.23.32", features = ["ring"] }
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.17"
tonic = { version = "0.14.2", features = ["tls-native-roots"] }
tracing = "0.1.41"

[dev-dependencies]
beacon-protos = { git = "https://github.com/semiotic-ai/beacon-protos.git", branch = "main" }
vee = { git = "https://github.com/semiotic-ai/veemon.git", branch = "main" }
hex = "0.4.3"
